service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telecom-aiops-service
spec:
  selector:
    app: telecom-aiops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
