route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: telecom-aiops-route
spec:
  to:
    kind: Service
    name: telecom-aiops-service
  port:
    targetPort: 80
